--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,3 +204,7 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(talker_node src/talker.cpp)
+target_link_libraries(talker_node ${catkin_LIBRARIES})
+# add_dependencies(talker_node beginner_tutorials_generate_messages_cpp)
