--- a/package.xml
+++ b/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="mayankjoshi63@gmail.com">mayankjo</maintainer>
 
-  <license>BSD</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
